stretch fix

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -30,6 +30,7 @@
         width: 30%;
         min-height: 0;
         min-width: 0;
+        align-items: flex-start;
     }
     &:hover{
         background-color: rgb(207, 207, 207);
